[package]
name = "thor-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "thor_cluster"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
libc = "0.2.147"

[dependencies.arrow]
version = "42.0.0"
features = ["pyarrow"]

