[package]
name = "thor-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "thor_cluster"
crate-type = ["cdylib", "rlib"]

[dependencies]
core_affinity = "0.8.0"
fixed = "1.23.1"
kiddo = { version = "2.1.1", features = ["simd"] }
libc = "0.2.147"
log = "0.4.19"
ordered-float = "3.7.0"
pyo3-log = "0.8.2"
rayon = "1.7.0"
rstar = "0.11.0"
uuid = { version = "1.4.0", features = ["v4"] }

[dependencies.arrow]
version = "42.0.0"
features = ["pyarrow"]

[dependencies.pyo3]
version = "0.19.0"
features = ["macros"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "benchmark_clustering"
harness = false
